--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LightDB server using fastify.js",
   "main": "index.js",
   "scripts": {
-    "build": "pkg --debug -c package.json -o dist/lightdb-server server.js"
+    "build": "pkg -c package.json -o dist/lightdb-server index.js"
   },
   "repository": {
     "type": "git",
